# rag-document-assistant

./: README.md  pyproject.toml
_inbox/done/: 2026-03-21_readme-brand-alignment.md
app/: streamlit_app.py
data/eval/: test_questions.json
data/experiments/: EXPERIMENTS_REGISTRY.md
data/experiments/s02_d06_exp001/: README.md  policy_2023.md  policy_2024.md
data/experiments/s03_d07_exp002/: README.md  exp_002_cross_lingual.py  exp_002_results.json
data/sample_docs/: sample.md  sample.txt  sample_de.md  sample_de.txt
docs/: dsm-validation-tracker.md
docs/checkpoints/: light_2026-03-21_checkpoint.md  light_2026-03-23_checkpoint.md  s01_d02_checkpoint.md  s01_d03_checkpoint.md  s01_d05_checkpoint.md  s02_d06_checkpoint.md  s03_d07_checkpoint.md
docs/checkpoints/done/: light_2026-03-21_checkpoint.md  s01_d01_checkpoint.md  s01_d02_checkpoint.md  s01_d03_checkpoint.md  s01_d04_checkpoint.md  s01_d05_checkpoint.md  s02_d06_checkpoint.md  s03_d07_checkpoint.md
docs/decisions/: DEC-002_streamlit-architecture.md
docs/experiments/: EXP-001_multi-source-detection.md
src/evaluation/: __init__.py  metrics.py  runner.py  tracker.py
src/ingestion/: __init__.py  chunking.py  loaders.py
src/llm/: __init__.py  prompts.py  providers.py
src/retrieval/: __init__.py  chain.py
src/vectorstore/: __init__.py  embeddings.py  store.py
src/vectorstore/utils/: __init__.py  language.py
tests/: test_evaluation.py  test_ingestion.py  test_language.py  test_prompts.py  test_retrieval.py  test_vectorstore.py
