[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-document-assistant"
version = "0.1.0"
description = "Production-ready RAG system with multi-provider LLM support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Alberto Díaz-Durana", email = "adiazdurana@gmail.com"}
]
keywords = ["rag", "langchain", "llm", "vector-database", "fastapi"]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "mlflow>=2.10.0",
    "streamlit>=1.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
